--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,10 @@
     "https://*/*",
     "http://*/*",
     "tabs"
-  ]
+  ],
+  "icons": {
+    "16": "assets/icon16.png",
+    "48": "assets/icon48.png",
+    "128": "assets/icon128.png"
+  }
 }
