--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Injecta",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "Injects scripts into your current page, allowing easy usage of utility JS libraries in foreign webpages.",
+  "description": "Inject JavaScript libraries into your current page.",
   "homepage_url": "http://danharper.me",
   "background": {
     "scripts": [
